--- a/Bs.Main/Modules/MasterlistModule/Views/PayeeAccountListingView.xaml
+++ b/Bs.Main/Modules/MasterlistModule/Views/PayeeAccountListingView.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Bs.Main.Modules.MasterlistModule.Views" xmlns:viewmodels="clr-namespace:Bs.Main.Modules.MasterlistModule.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:PayeeAccountListingVm}"
+             xmlns:local="clr-namespace:Bs.Main.Modules.MasterlistModule.Views" 
+             xmlns:viewmodels="clr-namespace:Bs.Main.Modules.MasterlistModule.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:PayeeAccountListingVm}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              xmlns:icons="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core"
@@ -14,9 +16,9 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
-            <ColumnDefinition Width="auto"/>
             <ColumnDefinition/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
 
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
@@ -29,18 +31,16 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="1" Grid.Column="0" Text="Payee:"/>
-        <ComboBox Grid.Row="1" Grid.Column="1" SelectedItem="{Binding SelectedPayeeAccount.Payee}" ItemsSource="{Binding PayeeIds}"/>
+        <ComboBox Grid.Row="1" Grid.Column="1" SelectedValue="{Binding SelectedPayeeAccount.Payee}" DisplayMemberPath="PayeeName" SelectedValuePath="PayeeName" ItemsSource="{Binding PayeeIds}"/>
 
         <TextBlock Grid.Row="1" Grid.Column="2" Text="Account Number:"/>
         <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding SelectedPayeeAccount.AccountNumber}"/>
         
-
-        
-        <DataGrid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="4" Height="150" Width="400" AutoGenerateColumns="False"
+        <DataGrid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="5" MinHeight="200" AutoGenerateColumns="False"
                   ItemsSource="{Binding SelectedPayeeAccount.DefaultParticulars}" CanUserAddRows="True">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Key" Width="100" Binding="{Binding Key}"/>
-                <DataGridTextColumn Header="Value" Width="150" Binding="{Binding Value}"/>
+                <DataGridTextColumn Header="Key" Width="150" Binding="{Binding Key}"/>
+                <DataGridTextColumn Header="Value" Width="175" Binding="{Binding Value}"/>
                 <DataGridTemplateColumn>
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -51,7 +51,7 @@
             </DataGrid.Columns>            
         </DataGrid>
 
-        <Button Grid.Row="4" Grid.Column="4" VerticalAlignment="Top" Command="{Binding AddParticularItem}" Style="{StaticResource Add}">
+        <Button Grid.Row="4" Grid.Column="5" VerticalAlignment="Top" Command="{Binding AddParticularItem}" Style="{StaticResource Add}">
             <StackPanel Orientation="Horizontal">
                 <!--<Image Source="{StaticResource icons}"/>-->
                 <!--<ContentControl Template="{StaticResource AddButton}"/>-->
@@ -60,8 +60,8 @@
         </Button>
 
 
-        <Button Grid.Row="4" Grid.Column="4" Content="Save" VerticalAlignment="Bottom" Command="{Binding Save}" CommandParameter="{Binding SelectedPayeeAccount}"/>
-        <Button Grid.Row="4" Grid.Column="5" Content="Delete" VerticalAlignment="Bottom" Command="{Binding Delete}" CommandParameter="{Binding SelectedPayeeAccount}"/>
+        <Button Grid.Row="4" Grid.Column="5" Content="Save" VerticalAlignment="Bottom" Command="{Binding Save}" CommandParameter="{Binding SelectedPayeeAccount}"/>
+        <Button Grid.Row="4" Grid.Column="6" Content="Delete" VerticalAlignment="Bottom" Command="{Binding Delete}" CommandParameter="{Binding SelectedPayeeAccount}"/>
 
         <DataGrid Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="7"
                   AutoGenerateColumns="False" IsReadOnly="True"
